# mapof

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: linting.yml  pypi-publish.yml  python-publish.yml  python-tests.yml  test-pypi-publish.yml  yapf-check.yml
docs/: .buildinfo  citation.html  genindex.html  index.html  inner_distances.html  installation.html  matchings.html  objects.inv  printing.html  py-modindex.html  quickstart.html  resources.html  search.html  searchindex.js  utils.html
docs-source/source/: citation.rst  conf.py  index.rst  inner_distances.rst  matchings.rst  printing.rst  utils.rst
docs-source/source/embedding/: embed.rst  index.rst  initial_positions.rst
docs-source/source/features/: common.rst  distortion.rst  mallows.rst  monotonicity.rst  stability.rst
docs-source/source/objects/: Experiment.rst  Family.rst  Instance.rst  index.rst
docs-source/source/persistence/: experiment_exports.rst  experiment_imports.rst  index.rst
docs-source/source/reference/: index.rst  matchings.rst
docs/.doctrees/: citation.doctree  environment.pickle  index.doctree  inner_distances.doctree  installation.doctree  matchings.doctree  printing.doctree  quickstart.doctree  resources.doctree  utils.doctree
docs/_modules/: index.html
docs/_sources/: installation.rst  resources.rst  utils.rst
docs/_static/: documentation_options.js
docs/embedding/: embed.html  index.html  initial_positions.html
docs/features/: common.html  distortion.html  index.html  mallows.html  monotonicity.html  stability.html
docs/objects/: Experiment.html  Family.html  Instance.html  index.html
docs/persistence/: experiment_exports.html  experiment_imports.html  index.html
docs/reference/: index.html  inner_distances.html  matchings.html  printing.html  utils.html
mapel-core/: pyproject.toml
(+140 files in other folders)
