[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mapof"
version = "0.0.2alpha2"
authors = [
 {name = "Stanislaw Szufa", email = "s.szufa@gmail.com"},
 {name = "Niclas Boehmer", email = "niclas.boehmer@tu-berlin.de"},
 {name = "Andrzej Kaczmarczyk", email = "andrzej.kaczmarczyk@agh.edu.pl"},
 {name = "Kasper Sapala", email = "kasper.sapala@gmail.com"},
 {name = "Tomasz Was", email = "tomasz.t.was@gmail.com"},
]
description = "Map of Objects---essential parts"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
readme = "README.md"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

